# 2026-NVIDIA

./: .gitignore  01_quantum_enhanced_optimization_LABS_completed (1).ipynb  LABS-challenge-Phase1 (1).md  LABS-challenge-Phase1.md  LABS-challenge-Phase2.md  Makefile  PRD-template.md  PRD.md  Phase 1 deliverables  Phase 1 deliverables PRD.md  QAOA(better).ipynb  README.md  Submission for PDR.ipynb  Team Information  analyze_benchmark.ipynb  benchmark_results.csv  gpu_benchmark.py  gqe-mts.py  gqe_example.py  gqe_nontn.py  gqe_test.py  main.py  pyproject.toml  qe_mts_benchmark.py  test.py
.ipynb_checkpoints/: cpu_benchmark-checkpoint.py
GQEMTS/: gqe.py  loss.py  transformer.py
Phase 2/: enhanced_labs_implementation.py  gpu_labs.py  tests.py
classical/: Makefile  kernels.cu  kernels.cuh  labs_gpu  labs_gpu.cu  mts.py  mts_cuda_old.py  mts_intro.md  mts_tests.ipynb
classical_mts/: mts.py  mts_fusion_kernel.py
cudaq_mlir_parser/: __init__.py  converter.py  ir_parser.py  simulator.py
labs_gpu/: .gitignore  01_quantum_enhanced_optimization_LABS.ipynb  Untitled.ipynb  benchmark_performance.py  beyblade_benchmark_metrics.csv  evaluation_metrics_1_2_steps.csv  labs_gpu.cu  labs_n64_lite.ncu-rep  labs_results.csv  labs_results_optimized.csv  make_plots.py  one_shot.cu  one_shot.py  optimized.cu  report1.nsys-rep  report1.sqlite  report2.nsys-rep  report2.sqlite  report3.nsys-rep  report3.sqlite  report34.sqlite  report4.nsys-rep  report4.sqlite  report5.nsys-rep  report5.sqlite  report6.nsys-rep  report6.sqlite  run  run_o  runopt  variant_10steps_benchmark_metrics.csv  (+1 more)
(+231 files in other folders)
